# cs-2022-1

./: README.md
aula-01/: atividadeSupervisionada001004.md
aula01/: atividadeSupervisionada001004.md  tarefa001_20220525_questionario_perfil.md
aula025a028/: aulas025028_atividadeSupervisionada.md
aula04/: tarefa003_git-exercicios.md  tarefa004_git-branching.md
aula05/: linguagems-de-programacao.md
aula08/src/: IEnderecoImpl.py  bairro.py  cidade.py  endereco.py  estado.py  iendereco.py  logradouro.py  pais.py  pessoa_fisica.py
tarefa009/loja/src/: livro.py  mouse.py  produto.py  produto_teste.py
tarefa009/zoologico/src/: animal.py  cachorro.py  cavalo.py  preguica.py  veterinario.py  zoologico.py
tarefa010/exercicio-01/: benchmark.py  benchmark_results.csv  benchmarks.csv  iterative_quicksort.py  main.py  recursive_quicksort.py
tarefa010/exercicio-02/: agenda.py  contato.py
tarefa011/: padroes-de-codificacao.md  resolucao-tarefa011.md  tarefa011.md
tarefa011/code-samples/: exception_handling.py
tarefa012/exercicio-1/: main.py
tarefa012/exercicio-2/: main.py
tarefa012/exercicio-3/: dados_de_login.json  login.py  login_invalido_error.py  main.py  usuario_ja_existe_error.py
tarefa012/exercicio-4/: conta_bancaria.py  main.py
tarefa013/: tarefa013.md
tarefa016/: runtime_generics_closure_logging.txt
tarefa016/generics/: main.py  stack.py
tarefa016/outros_conceitos/project/: README.md  pyproject.toml
tarefa016/outros_conceitos/project/project/src/: crud.py  main.py  models.py  schemas.py
tarefa016/project/: README.md  pyproject.toml
(+29 files in other folders)
